# TODO

./: DESCRIPTION.md  README.md  run-all.ps1  start-all.sh
backend/: .env  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: todos.py
backend/app/core/: database.py
backend/app/models/: todo.py
backend/app/repositories/: todo_repo.py
backend/app/schemas/: todo.py
backend/app/services/: todo_service.py
backend/core/: config.py  db.py
backend/core/migrations/: env.py
backend/core/migrations/versions/: 16dda13fef97_create_todos_table.py  6595de729725_create_todos_table.py  b25e831e6a5f_create_todos_table.py
backend/db/: docker-compose.yaml
backend/models/: __init__.py  todo.py
backend/repositories/: todo_repository.py
backend/routers/: __init__.py  todo_router.py
backend/schemas/: __init__.py  todo.py
backend/services/: todo_service.py
backend/tests/: conftest.py  test_main.py  test_todo_router.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css  types.ts
frontend/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useTodos.ts
frontend/src/pages/: TodosPage.tsx
frontend/src/services/: api.ts  todoApi.ts
