[project]
name = "todo-backend"
version = "0.1.0"
description = "Simple FastAPI ToDo backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "alembic",
    "pydantic",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
[pytest]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
